// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaGenerator generate schema from metadata [mysql]: mysql-create-schema-dump 1`] = `
"set names utf8;
set foreign_key_checks = 0;

create table \`author2\` (\`id\` int unsigned not null auto_increment primary key, \`created_at\` datetime(3) not null default current_timestamp(3), \`updated_at\` datetime(3) not null default current_timestamp(3), \`name\` varchar(255) not null, \`email\` varchar(255) not null, \`age\` int(11) null, \`terms_accepted\` tinyint(1) not null default 0, \`optional\` tinyint(1) null, \`identities\` json null, \`born\` date null, \`born_time\` time null, \`favourite_book_uuid_pk\` varchar(36) null, \`favourite_author_id\` int(11) unsigned null) default character set utf8 engine = InnoDB;
alter table \`author2\` add unique \`author2_email_unique\`(\`email\`);
alter table \`author2\` add index \`author2_favourite_book_uuid_pk_index\`(\`favourite_book_uuid_pk\`);
alter table \`author2\` add index \`author2_favourite_author_id_index\`(\`favourite_author_id\`);

create table \`book2\` (\`uuid_pk\` varchar(36) not null, \`created_at\` datetime(3) not null default current_timestamp(3), \`title\` varchar(255) null, \`perex\` text null, \`price\` float null, \`double\` double null, \`meta\` json null, \`author_id\` int(11) unsigned not null, \`publisher_id\` int(11) unsigned null) default character set utf8 engine = InnoDB;
alter table \`book2\` add primary key \`book2_pkey\`(\`uuid_pk\`);
alter table \`book2\` add index \`book2_author_id_index\`(\`author_id\`);
alter table \`book2\` add index \`book2_publisher_id_index\`(\`publisher_id\`);

create table \`book_tag2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(50) not null) default character set utf8 engine = InnoDB;

create table \`publisher2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`type\` enum('local', 'global') not null, \`enum1\` tinyint null, \`enum2\` tinyint null, \`enum3\` tinyint null, \`enum4\` enum('a', 'b', 'c') null) default character set utf8 engine = InnoDB;

create table \`test2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) null, \`book_uuid_pk\` varchar(36) null, \`version\` int(11) not null default 1) default character set utf8 engine = InnoDB;
alter table \`test2\` add unique \`test2_book_uuid_pk_unique\`(\`book_uuid_pk\`);
alter table \`test2\` add index \`test2_book_uuid_pk_index\`(\`book_uuid_pk\`);

create table \`foo_bar2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`baz_id\` int(11) unsigned null, \`foo_bar_id\` int(11) unsigned null, \`version\` datetime not null default current_timestamp) default character set utf8 engine = InnoDB;
alter table \`foo_bar2\` add unique \`foo_bar2_baz_id_unique\`(\`baz_id\`);
alter table \`foo_bar2\` add index \`foo_bar2_baz_id_index\`(\`baz_id\`);
alter table \`foo_bar2\` add unique \`foo_bar2_foo_bar_id_unique\`(\`foo_bar_id\`);
alter table \`foo_bar2\` add index \`foo_bar2_foo_bar_id_index\`(\`foo_bar_id\`);

create table \`foo_baz2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`version\` datetime(3) not null default current_timestamp(3)) default character set utf8 engine = InnoDB;

create table \`author_to_friend\` (\`author2_1_id\` int(11) unsigned not null, \`author2_2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`author_to_friend\` add index \`author_to_friend_author2_1_id_index\`(\`author2_1_id\`);
alter table \`author_to_friend\` add index \`author_to_friend_author2_2_id_index\`(\`author2_2_id\`);
alter table \`author_to_friend\` add primary key \`author_to_friend_pkey\`(\`author2_1_id\`, \`author2_2_id\`);

create table \`author2_to_author2\` (\`author2_1_id\` int(11) unsigned not null, \`author2_2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`author2_to_author2\` add index \`author2_to_author2_author2_1_id_index\`(\`author2_1_id\`);
alter table \`author2_to_author2\` add index \`author2_to_author2_author2_2_id_index\`(\`author2_2_id\`);
alter table \`author2_to_author2\` add primary key \`author2_to_author2_pkey\`(\`author2_1_id\`, \`author2_2_id\`);

create table \`book2_to_book_tag2\` (\`order\` int unsigned not null auto_increment primary key, \`book2_uuid_pk\` varchar(36) not null, \`book_tag2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`book2_to_book_tag2\` add index \`book2_to_book_tag2_book2_uuid_pk_index\`(\`book2_uuid_pk\`);
alter table \`book2_to_book_tag2\` add index \`book2_to_book_tag2_book_tag2_id_index\`(\`book_tag2_id\`);

create table \`book_to_tag_unordered\` (\`book2_uuid_pk\` varchar(36) not null, \`book_tag2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`book_to_tag_unordered\` add index \`book_to_tag_unordered_book2_uuid_pk_index\`(\`book2_uuid_pk\`);
alter table \`book_to_tag_unordered\` add index \`book_to_tag_unordered_book_tag2_id_index\`(\`book_tag2_id\`);
alter table \`book_to_tag_unordered\` add primary key \`book_to_tag_unordered_pkey\`(\`book2_uuid_pk\`, \`book_tag2_id\`);

create table \`publisher2_to_test2\` (\`id\` int unsigned not null auto_increment primary key, \`publisher2_id\` int(11) unsigned not null, \`test2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`publisher2_to_test2\` add index \`publisher2_to_test2_publisher2_id_index\`(\`publisher2_id\`);
alter table \`publisher2_to_test2\` add index \`publisher2_to_test2_test2_id_index\`(\`test2_id\`);

alter table \`author2\` add constraint \`author2_favourite_book_uuid_pk_foreign\` foreign key (\`favourite_book_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete set null;
alter table \`author2\` add constraint \`author2_favourite_author_id_foreign\` foreign key (\`favourite_author_id\`) references \`author2\` (\`id\`) on update cascade on delete set null;

alter table \`book2\` add constraint \`book2_author_id_foreign\` foreign key (\`author_id\`) references \`author2\` (\`id\`);
alter table \`book2\` add constraint \`book2_publisher_id_foreign\` foreign key (\`publisher_id\`) references \`publisher2\` (\`id\`) on update cascade on delete cascade;

alter table \`test2\` add constraint \`test2_book_uuid_pk_foreign\` foreign key (\`book_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on delete set null;

alter table \`foo_bar2\` add constraint \`foo_bar2_baz_id_foreign\` foreign key (\`baz_id\`) references \`foo_baz2\` (\`id\`) on update cascade on delete set null;
alter table \`foo_bar2\` add constraint \`foo_bar2_foo_bar_id_foreign\` foreign key (\`foo_bar_id\`) references \`foo_bar2\` (\`id\`) on update cascade on delete set null;

alter table \`author_to_friend\` add constraint \`author_to_friend_author2_1_id_foreign\` foreign key (\`author2_1_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;
alter table \`author_to_friend\` add constraint \`author_to_friend_author2_2_id_foreign\` foreign key (\`author2_2_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;

alter table \`author2_to_author2\` add constraint \`author2_to_author2_author2_1_id_foreign\` foreign key (\`author2_1_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;
alter table \`author2_to_author2\` add constraint \`author2_to_author2_author2_2_id_foreign\` foreign key (\`author2_2_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;

alter table \`book2_to_book_tag2\` add constraint \`book2_to_book_tag2_book2_uuid_pk_foreign\` foreign key (\`book2_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete cascade;
alter table \`book2_to_book_tag2\` add constraint \`book2_to_book_tag2_book_tag2_id_foreign\` foreign key (\`book_tag2_id\`) references \`book_tag2\` (\`id\`) on update cascade on delete cascade;

alter table \`book_to_tag_unordered\` add constraint \`book_to_tag_unordered_book2_uuid_pk_foreign\` foreign key (\`book2_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete cascade;
alter table \`book_to_tag_unordered\` add constraint \`book_to_tag_unordered_book_tag2_id_foreign\` foreign key (\`book_tag2_id\`) references \`book_tag2\` (\`id\`) on update cascade on delete cascade;

alter table \`publisher2_to_test2\` add constraint \`publisher2_to_test2_publisher2_id_foreign\` foreign key (\`publisher2_id\`) references \`publisher2\` (\`id\`) on update cascade on delete cascade;
alter table \`publisher2_to_test2\` add constraint \`publisher2_to_test2_test2_id_foreign\` foreign key (\`test2_id\`) references \`test2\` (\`id\`) on update cascade on delete cascade;

set foreign_key_checks = 1;
"
`;

exports[`SchemaGenerator generate schema from metadata [mysql]: mysql-drop-schema-dump 1`] = `
"set names utf8;
set foreign_key_checks = 0;

drop table if exists \`author2\`;
drop table if exists \`book2\`;
drop table if exists \`book_tag2\`;
drop table if exists \`publisher2\`;
drop table if exists \`test2\`;
drop table if exists \`foo_bar2\`;
drop table if exists \`foo_baz2\`;
drop table if exists \`author_to_friend\`;
drop table if exists \`author2_to_author2\`;
drop table if exists \`book2_to_book_tag2\`;
drop table if exists \`book_to_tag_unordered\`;
drop table if exists \`publisher2_to_test2\`;

set foreign_key_checks = 1;
"
`;

exports[`SchemaGenerator generate schema from metadata [mysql]: mysql-schema-dump 1`] = `
"set names utf8;
set foreign_key_checks = 0;

drop table if exists \`author2\`;
drop table if exists \`book2\`;
drop table if exists \`book_tag2\`;
drop table if exists \`publisher2\`;
drop table if exists \`test2\`;
drop table if exists \`foo_bar2\`;
drop table if exists \`foo_baz2\`;
drop table if exists \`author_to_friend\`;
drop table if exists \`author2_to_author2\`;
drop table if exists \`book2_to_book_tag2\`;
drop table if exists \`book_to_tag_unordered\`;
drop table if exists \`publisher2_to_test2\`;

create table \`author2\` (\`id\` int unsigned not null auto_increment primary key, \`created_at\` datetime(3) not null default current_timestamp(3), \`updated_at\` datetime(3) not null default current_timestamp(3), \`name\` varchar(255) not null, \`email\` varchar(255) not null, \`age\` int(11) null, \`terms_accepted\` tinyint(1) not null default 0, \`optional\` tinyint(1) null, \`identities\` json null, \`born\` date null, \`born_time\` time null, \`favourite_book_uuid_pk\` varchar(36) null, \`favourite_author_id\` int(11) unsigned null) default character set utf8 engine = InnoDB;
alter table \`author2\` add unique \`author2_email_unique\`(\`email\`);
alter table \`author2\` add index \`author2_favourite_book_uuid_pk_index\`(\`favourite_book_uuid_pk\`);
alter table \`author2\` add index \`author2_favourite_author_id_index\`(\`favourite_author_id\`);

create table \`book2\` (\`uuid_pk\` varchar(36) not null, \`created_at\` datetime(3) not null default current_timestamp(3), \`title\` varchar(255) null, \`perex\` text null, \`price\` float null, \`double\` double null, \`meta\` json null, \`author_id\` int(11) unsigned not null, \`publisher_id\` int(11) unsigned null) default character set utf8 engine = InnoDB;
alter table \`book2\` add primary key \`book2_pkey\`(\`uuid_pk\`);
alter table \`book2\` add index \`book2_author_id_index\`(\`author_id\`);
alter table \`book2\` add index \`book2_publisher_id_index\`(\`publisher_id\`);

create table \`book_tag2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(50) not null) default character set utf8 engine = InnoDB;

create table \`publisher2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`type\` enum('local', 'global') not null, \`enum1\` tinyint null, \`enum2\` tinyint null, \`enum3\` tinyint null, \`enum4\` enum('a', 'b', 'c') null) default character set utf8 engine = InnoDB;

create table \`test2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) null, \`book_uuid_pk\` varchar(36) null, \`version\` int(11) not null default 1) default character set utf8 engine = InnoDB;
alter table \`test2\` add unique \`test2_book_uuid_pk_unique\`(\`book_uuid_pk\`);
alter table \`test2\` add index \`test2_book_uuid_pk_index\`(\`book_uuid_pk\`);

create table \`foo_bar2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`baz_id\` int(11) unsigned null, \`foo_bar_id\` int(11) unsigned null, \`version\` datetime not null default current_timestamp) default character set utf8 engine = InnoDB;
alter table \`foo_bar2\` add unique \`foo_bar2_baz_id_unique\`(\`baz_id\`);
alter table \`foo_bar2\` add index \`foo_bar2_baz_id_index\`(\`baz_id\`);
alter table \`foo_bar2\` add unique \`foo_bar2_foo_bar_id_unique\`(\`foo_bar_id\`);
alter table \`foo_bar2\` add index \`foo_bar2_foo_bar_id_index\`(\`foo_bar_id\`);

create table \`foo_baz2\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255) not null, \`version\` datetime(3) not null default current_timestamp(3)) default character set utf8 engine = InnoDB;

create table \`author_to_friend\` (\`author2_1_id\` int(11) unsigned not null, \`author2_2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`author_to_friend\` add index \`author_to_friend_author2_1_id_index\`(\`author2_1_id\`);
alter table \`author_to_friend\` add index \`author_to_friend_author2_2_id_index\`(\`author2_2_id\`);
alter table \`author_to_friend\` add primary key \`author_to_friend_pkey\`(\`author2_1_id\`, \`author2_2_id\`);

create table \`author2_to_author2\` (\`author2_1_id\` int(11) unsigned not null, \`author2_2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`author2_to_author2\` add index \`author2_to_author2_author2_1_id_index\`(\`author2_1_id\`);
alter table \`author2_to_author2\` add index \`author2_to_author2_author2_2_id_index\`(\`author2_2_id\`);
alter table \`author2_to_author2\` add primary key \`author2_to_author2_pkey\`(\`author2_1_id\`, \`author2_2_id\`);

create table \`book2_to_book_tag2\` (\`order\` int unsigned not null auto_increment primary key, \`book2_uuid_pk\` varchar(36) not null, \`book_tag2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`book2_to_book_tag2\` add index \`book2_to_book_tag2_book2_uuid_pk_index\`(\`book2_uuid_pk\`);
alter table \`book2_to_book_tag2\` add index \`book2_to_book_tag2_book_tag2_id_index\`(\`book_tag2_id\`);

create table \`book_to_tag_unordered\` (\`book2_uuid_pk\` varchar(36) not null, \`book_tag2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`book_to_tag_unordered\` add index \`book_to_tag_unordered_book2_uuid_pk_index\`(\`book2_uuid_pk\`);
alter table \`book_to_tag_unordered\` add index \`book_to_tag_unordered_book_tag2_id_index\`(\`book_tag2_id\`);
alter table \`book_to_tag_unordered\` add primary key \`book_to_tag_unordered_pkey\`(\`book2_uuid_pk\`, \`book_tag2_id\`);

create table \`publisher2_to_test2\` (\`id\` int unsigned not null auto_increment primary key, \`publisher2_id\` int(11) unsigned not null, \`test2_id\` int(11) unsigned not null) default character set utf8 engine = InnoDB;
alter table \`publisher2_to_test2\` add index \`publisher2_to_test2_publisher2_id_index\`(\`publisher2_id\`);
alter table \`publisher2_to_test2\` add index \`publisher2_to_test2_test2_id_index\`(\`test2_id\`);

alter table \`author2\` add constraint \`author2_favourite_book_uuid_pk_foreign\` foreign key (\`favourite_book_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete set null;
alter table \`author2\` add constraint \`author2_favourite_author_id_foreign\` foreign key (\`favourite_author_id\`) references \`author2\` (\`id\`) on update cascade on delete set null;

alter table \`book2\` add constraint \`book2_author_id_foreign\` foreign key (\`author_id\`) references \`author2\` (\`id\`);
alter table \`book2\` add constraint \`book2_publisher_id_foreign\` foreign key (\`publisher_id\`) references \`publisher2\` (\`id\`) on update cascade on delete cascade;

alter table \`test2\` add constraint \`test2_book_uuid_pk_foreign\` foreign key (\`book_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on delete set null;

alter table \`foo_bar2\` add constraint \`foo_bar2_baz_id_foreign\` foreign key (\`baz_id\`) references \`foo_baz2\` (\`id\`) on update cascade on delete set null;
alter table \`foo_bar2\` add constraint \`foo_bar2_foo_bar_id_foreign\` foreign key (\`foo_bar_id\`) references \`foo_bar2\` (\`id\`) on update cascade on delete set null;

alter table \`author_to_friend\` add constraint \`author_to_friend_author2_1_id_foreign\` foreign key (\`author2_1_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;
alter table \`author_to_friend\` add constraint \`author_to_friend_author2_2_id_foreign\` foreign key (\`author2_2_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;

alter table \`author2_to_author2\` add constraint \`author2_to_author2_author2_1_id_foreign\` foreign key (\`author2_1_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;
alter table \`author2_to_author2\` add constraint \`author2_to_author2_author2_2_id_foreign\` foreign key (\`author2_2_id\`) references \`author2\` (\`id\`) on update cascade on delete cascade;

alter table \`book2_to_book_tag2\` add constraint \`book2_to_book_tag2_book2_uuid_pk_foreign\` foreign key (\`book2_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete cascade;
alter table \`book2_to_book_tag2\` add constraint \`book2_to_book_tag2_book_tag2_id_foreign\` foreign key (\`book_tag2_id\`) references \`book_tag2\` (\`id\`) on update cascade on delete cascade;

alter table \`book_to_tag_unordered\` add constraint \`book_to_tag_unordered_book2_uuid_pk_foreign\` foreign key (\`book2_uuid_pk\`) references \`book2\` (\`uuid_pk\`) on update cascade on delete cascade;
alter table \`book_to_tag_unordered\` add constraint \`book_to_tag_unordered_book_tag2_id_foreign\` foreign key (\`book_tag2_id\`) references \`book_tag2\` (\`id\`) on update cascade on delete cascade;

alter table \`publisher2_to_test2\` add constraint \`publisher2_to_test2_publisher2_id_foreign\` foreign key (\`publisher2_id\`) references \`publisher2\` (\`id\`) on update cascade on delete cascade;
alter table \`publisher2_to_test2\` add constraint \`publisher2_to_test2_test2_id_foreign\` foreign key (\`test2_id\`) references \`test2\` (\`id\`) on update cascade on delete cascade;

set foreign_key_checks = 1;
"
`;

exports[`SchemaGenerator generate schema from metadata [mysql]: mysql-update-schema-dump 1`] = `
"set names utf8;
set foreign_key_checks = 0;

alter table \`book2\` drop \`foo\`;

alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;
alter table \`test2\` drop index \`test2_foo___bar_unique\`;
alter table \`test2\` drop index \`test2_foo___bar_index\`;
alter table \`test2\` drop \`foo___bar\`;
alter table \`test2\` drop \`foo___baz\`;

set foreign_key_checks = 1;
"
`;

exports[`SchemaGenerator generate schema from metadata [postgres]: postgres-create-schema-dump 1`] = `
"set names 'utf8';
set session_replication_role = 'replica';

create table \\"author2\\" (\\"id\\" serial primary key, \\"created_at\\" timestamptz(3) not null default current_timestamp(3), \\"updated_at\\" timestamptz(3) not null default current_timestamp(3), \\"name\\" varchar(255) not null, \\"email\\" varchar(255) not null, \\"age\\" int4 null, \\"terms_accepted\\" bool not null default 0, \\"optional\\" bool null, \\"identities\\" json null, \\"born\\" date null, \\"born_time\\" time(0) null, \\"favourite_book_uuid_pk\\" varchar(36) null, \\"favourite_author_id\\" int4 null);
alter table \\"author2\\" add constraint \\"author2_email_unique\\" unique (\\"email\\");

create table \\"book2\\" (\\"uuid_pk\\" varchar(36) not null, \\"created_at\\" timestamptz(3) not null default current_timestamp(3), \\"title\\" varchar(255) null, \\"perex\\" text null, \\"price\\" float null, \\"double\\" double null, \\"meta\\" json null, \\"author_id\\" int4 not null, \\"publisher_id\\" int4 null);
alter table \\"book2\\" add constraint \\"book2_pkey\\" primary key (\\"uuid_pk\\");

create table \\"book_tag2\\" (\\"id\\" serial primary key, \\"name\\" varchar(50) not null);

create table \\"publisher2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"type\\" text check (\\"type\\" in ('local', 'global')) not null, \\"enum1\\" int2 null, \\"enum2\\" int2 null, \\"enum3\\" int2 null, \\"enum4\\" text check (\\"enum4\\" in ('a', 'b', 'c')) null);

create table \\"test2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) null, \\"book_uuid_pk\\" varchar(36) null, \\"version\\" int4 not null default 1);
alter table \\"test2\\" add constraint \\"test2_book_uuid_pk_unique\\" unique (\\"book_uuid_pk\\");

create table \\"foo_bar2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"baz_id\\" int4 null, \\"foo_bar_id\\" int4 null, \\"version\\" timestamptz(0) not null default current_timestamp(0));
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_baz_id_unique\\" unique (\\"baz_id\\");
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_foo_bar_id_unique\\" unique (\\"foo_bar_id\\");

create table \\"foo_baz2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"version\\" timestamptz(3) not null default current_timestamp(3));

create table \\"label2\\" (\\"uuid\\" uuid not null, \\"name\\" varchar(255) not null);
alter table \\"label2\\" add constraint \\"label2_pkey\\" primary key (\\"uuid\\");

create table \\"author_to_friend\\" (\\"author2_1_id\\" int4 not null, \\"author2_2_id\\" int4 not null);
alter table \\"author_to_friend\\" add constraint \\"author_to_friend_pkey\\" primary key (\\"author2_1_id\\", \\"author2_2_id\\");

create table \\"author2_to_author2\\" (\\"author2_1_id\\" int4 not null, \\"author2_2_id\\" int4 not null);
alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_pkey\\" primary key (\\"author2_1_id\\", \\"author2_2_id\\");

create table \\"book2_to_book_tag2\\" (\\"order\\" serial primary key, \\"book2_uuid_pk\\" varchar(36) not null, \\"book_tag2_id\\" int4 not null);

create table \\"book_to_tag_unordered\\" (\\"book2_uuid_pk\\" varchar(36) not null, \\"book_tag2_id\\" int4 not null);
alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_pkey\\" primary key (\\"book2_uuid_pk\\", \\"book_tag2_id\\");

create table \\"publisher2_to_test2\\" (\\"id\\" serial primary key, \\"publisher2_id\\" int4 not null, \\"test2_id\\" int4 not null);

alter table \\"author2\\" add constraint \\"author2_favourite_book_uuid_pk_foreign\\" foreign key (\\"favourite_book_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete set null;
alter table \\"author2\\" add constraint \\"author2_favourite_author_id_foreign\\" foreign key (\\"favourite_author_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete set null;

alter table \\"book2\\" add constraint \\"book2_author_id_foreign\\" foreign key (\\"author_id\\") references \\"author2\\" (\\"id\\");
alter table \\"book2\\" add constraint \\"book2_publisher_id_foreign\\" foreign key (\\"publisher_id\\") references \\"publisher2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"test2\\" add constraint \\"test2_book_uuid_pk_foreign\\" foreign key (\\"book_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on delete set null;

alter table \\"foo_bar2\\" add constraint \\"foo_bar2_baz_id_foreign\\" foreign key (\\"baz_id\\") references \\"foo_baz2\\" (\\"id\\") on update cascade on delete set null;
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_foo_bar_id_foreign\\" foreign key (\\"foo_bar_id\\") references \\"foo_bar2\\" (\\"id\\") on update cascade on delete set null;

alter table \\"author_to_friend\\" add constraint \\"author_to_friend_author2_1_id_foreign\\" foreign key (\\"author2_1_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"author_to_friend\\" add constraint \\"author_to_friend_author2_2_id_foreign\\" foreign key (\\"author2_2_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_author2_1_id_foreign\\" foreign key (\\"author2_1_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_author2_2_id_foreign\\" foreign key (\\"author2_2_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"book2_to_book_tag2\\" add constraint \\"book2_to_book_tag2_book2_uuid_pk_foreign\\" foreign key (\\"book2_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete cascade;
alter table \\"book2_to_book_tag2\\" add constraint \\"book2_to_book_tag2_book_tag2_id_foreign\\" foreign key (\\"book_tag2_id\\") references \\"book_tag2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_book2_uuid_pk_foreign\\" foreign key (\\"book2_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete cascade;
alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_book_tag2_id_foreign\\" foreign key (\\"book_tag2_id\\") references \\"book_tag2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"publisher2_to_test2\\" add constraint \\"publisher2_to_test2_publisher2_id_foreign\\" foreign key (\\"publisher2_id\\") references \\"publisher2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"publisher2_to_test2\\" add constraint \\"publisher2_to_test2_test2_id_foreign\\" foreign key (\\"test2_id\\") references \\"test2\\" (\\"id\\") on update cascade on delete cascade;

set session_replication_role = 'origin';
"
`;

exports[`SchemaGenerator generate schema from metadata [postgres]: postgres-drop-schema-dump 1`] = `
"set names 'utf8';
set session_replication_role = 'replica';

drop table if exists \\"author2\\" cascade;
drop table if exists \\"book2\\" cascade;
drop table if exists \\"book_tag2\\" cascade;
drop table if exists \\"publisher2\\" cascade;
drop table if exists \\"test2\\" cascade;
drop table if exists \\"foo_bar2\\" cascade;
drop table if exists \\"foo_baz2\\" cascade;
drop table if exists \\"label2\\" cascade;
drop table if exists \\"author_to_friend\\" cascade;
drop table if exists \\"author2_to_author2\\" cascade;
drop table if exists \\"book2_to_book_tag2\\" cascade;
drop table if exists \\"book_to_tag_unordered\\" cascade;
drop table if exists \\"publisher2_to_test2\\" cascade;

set session_replication_role = 'origin';
"
`;

exports[`SchemaGenerator generate schema from metadata [postgres]: postgres-schema-dump 1`] = `
"set names 'utf8';
set session_replication_role = 'replica';

drop table if exists \\"author2\\" cascade;
drop table if exists \\"book2\\" cascade;
drop table if exists \\"book_tag2\\" cascade;
drop table if exists \\"publisher2\\" cascade;
drop table if exists \\"test2\\" cascade;
drop table if exists \\"foo_bar2\\" cascade;
drop table if exists \\"foo_baz2\\" cascade;
drop table if exists \\"label2\\" cascade;
drop table if exists \\"author_to_friend\\" cascade;
drop table if exists \\"author2_to_author2\\" cascade;
drop table if exists \\"book2_to_book_tag2\\" cascade;
drop table if exists \\"book_to_tag_unordered\\" cascade;
drop table if exists \\"publisher2_to_test2\\" cascade;

create table \\"author2\\" (\\"id\\" serial primary key, \\"created_at\\" timestamptz(3) not null default current_timestamp(3), \\"updated_at\\" timestamptz(3) not null default current_timestamp(3), \\"name\\" varchar(255) not null, \\"email\\" varchar(255) not null, \\"age\\" int4 null, \\"terms_accepted\\" bool not null default 0, \\"optional\\" bool null, \\"identities\\" json null, \\"born\\" date null, \\"born_time\\" time(0) null, \\"favourite_book_uuid_pk\\" varchar(36) null, \\"favourite_author_id\\" int4 null);
alter table \\"author2\\" add constraint \\"author2_email_unique\\" unique (\\"email\\");

create table \\"book2\\" (\\"uuid_pk\\" varchar(36) not null, \\"created_at\\" timestamptz(3) not null default current_timestamp(3), \\"title\\" varchar(255) null, \\"perex\\" text null, \\"price\\" float null, \\"double\\" double null, \\"meta\\" json null, \\"author_id\\" int4 not null, \\"publisher_id\\" int4 null);
alter table \\"book2\\" add constraint \\"book2_pkey\\" primary key (\\"uuid_pk\\");

create table \\"book_tag2\\" (\\"id\\" serial primary key, \\"name\\" varchar(50) not null);

create table \\"publisher2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"type\\" text check (\\"type\\" in ('local', 'global')) not null, \\"enum1\\" int2 null, \\"enum2\\" int2 null, \\"enum3\\" int2 null, \\"enum4\\" text check (\\"enum4\\" in ('a', 'b', 'c')) null);

create table \\"test2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) null, \\"book_uuid_pk\\" varchar(36) null, \\"version\\" int4 not null default 1);
alter table \\"test2\\" add constraint \\"test2_book_uuid_pk_unique\\" unique (\\"book_uuid_pk\\");

create table \\"foo_bar2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"baz_id\\" int4 null, \\"foo_bar_id\\" int4 null, \\"version\\" timestamptz(0) not null default current_timestamp(0));
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_baz_id_unique\\" unique (\\"baz_id\\");
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_foo_bar_id_unique\\" unique (\\"foo_bar_id\\");

create table \\"foo_baz2\\" (\\"id\\" serial primary key, \\"name\\" varchar(255) not null, \\"version\\" timestamptz(3) not null default current_timestamp(3));

create table \\"label2\\" (\\"uuid\\" uuid not null, \\"name\\" varchar(255) not null);
alter table \\"label2\\" add constraint \\"label2_pkey\\" primary key (\\"uuid\\");

create table \\"author_to_friend\\" (\\"author2_1_id\\" int4 not null, \\"author2_2_id\\" int4 not null);
alter table \\"author_to_friend\\" add constraint \\"author_to_friend_pkey\\" primary key (\\"author2_1_id\\", \\"author2_2_id\\");

create table \\"author2_to_author2\\" (\\"author2_1_id\\" int4 not null, \\"author2_2_id\\" int4 not null);
alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_pkey\\" primary key (\\"author2_1_id\\", \\"author2_2_id\\");

create table \\"book2_to_book_tag2\\" (\\"order\\" serial primary key, \\"book2_uuid_pk\\" varchar(36) not null, \\"book_tag2_id\\" int4 not null);

create table \\"book_to_tag_unordered\\" (\\"book2_uuid_pk\\" varchar(36) not null, \\"book_tag2_id\\" int4 not null);
alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_pkey\\" primary key (\\"book2_uuid_pk\\", \\"book_tag2_id\\");

create table \\"publisher2_to_test2\\" (\\"id\\" serial primary key, \\"publisher2_id\\" int4 not null, \\"test2_id\\" int4 not null);

alter table \\"author2\\" add constraint \\"author2_favourite_book_uuid_pk_foreign\\" foreign key (\\"favourite_book_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete set null;
alter table \\"author2\\" add constraint \\"author2_favourite_author_id_foreign\\" foreign key (\\"favourite_author_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete set null;

alter table \\"book2\\" add constraint \\"book2_author_id_foreign\\" foreign key (\\"author_id\\") references \\"author2\\" (\\"id\\");
alter table \\"book2\\" add constraint \\"book2_publisher_id_foreign\\" foreign key (\\"publisher_id\\") references \\"publisher2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"test2\\" add constraint \\"test2_book_uuid_pk_foreign\\" foreign key (\\"book_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on delete set null;

alter table \\"foo_bar2\\" add constraint \\"foo_bar2_baz_id_foreign\\" foreign key (\\"baz_id\\") references \\"foo_baz2\\" (\\"id\\") on update cascade on delete set null;
alter table \\"foo_bar2\\" add constraint \\"foo_bar2_foo_bar_id_foreign\\" foreign key (\\"foo_bar_id\\") references \\"foo_bar2\\" (\\"id\\") on update cascade on delete set null;

alter table \\"author_to_friend\\" add constraint \\"author_to_friend_author2_1_id_foreign\\" foreign key (\\"author2_1_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"author_to_friend\\" add constraint \\"author_to_friend_author2_2_id_foreign\\" foreign key (\\"author2_2_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_author2_1_id_foreign\\" foreign key (\\"author2_1_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"author2_to_author2\\" add constraint \\"author2_to_author2_author2_2_id_foreign\\" foreign key (\\"author2_2_id\\") references \\"author2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"book2_to_book_tag2\\" add constraint \\"book2_to_book_tag2_book2_uuid_pk_foreign\\" foreign key (\\"book2_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete cascade;
alter table \\"book2_to_book_tag2\\" add constraint \\"book2_to_book_tag2_book_tag2_id_foreign\\" foreign key (\\"book_tag2_id\\") references \\"book_tag2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_book2_uuid_pk_foreign\\" foreign key (\\"book2_uuid_pk\\") references \\"book2\\" (\\"uuid_pk\\") on update cascade on delete cascade;
alter table \\"book_to_tag_unordered\\" add constraint \\"book_to_tag_unordered_book_tag2_id_foreign\\" foreign key (\\"book_tag2_id\\") references \\"book_tag2\\" (\\"id\\") on update cascade on delete cascade;

alter table \\"publisher2_to_test2\\" add constraint \\"publisher2_to_test2_publisher2_id_foreign\\" foreign key (\\"publisher2_id\\") references \\"publisher2\\" (\\"id\\") on update cascade on delete cascade;
alter table \\"publisher2_to_test2\\" add constraint \\"publisher2_to_test2_test2_id_foreign\\" foreign key (\\"test2_id\\") references \\"test2\\" (\\"id\\") on update cascade on delete cascade;

set session_replication_role = 'origin';
"
`;

exports[`SchemaGenerator generate schema from metadata [postgres]: postgres-update-schema-dump 1`] = `
"set names 'utf8';
set session_replication_role = 'replica';

alter table \\"book2\\" drop column \\"foo\\";

alter table \\"test2\\" drop column \\"path\\";

set session_replication_role = 'origin';
"
`;

exports[`SchemaGenerator generate schema from metadata [sqlite]: sqlite-create-schema-dump 1`] = `
"pragma foreign_keys = off;

create table \`author3\` (\`id\` integer not null primary key autoincrement, \`created_at\` datetime null, \`updated_at\` datetime null, \`name\` varchar not null, \`email\` varchar not null, \`age\` integer null, \`terms_accepted\` integer not null default 0, \`identities\` varchar null, \`born\` date(3) null, \`born_time\` time(3) null);
create unique index \`author3_email_unique\` on \`author3\` (\`email\`);

create table \`book3\` (\`id\` integer not null primary key autoincrement, \`title\` varchar not null);

create table \`book_tag3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar not null, \`version\` datetime not null default current_timestamp);

create table \`publisher3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar not null, \`type\` varchar not null);

create table \`test3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar null, \`version\` integer not null default 1);

create table \`book3_to_book_tag3\` (\`id\` integer not null primary key autoincrement);

create table \`publisher3_to_test3\` (\`id\` integer not null primary key autoincrement);

alter table \`author3\` add column \`favourite_book_id\` integer null;
create index \`author3_favourite_book_id_index\` on \`author3\` (\`favourite_book_id\`);

alter table \`book3\` add column \`author_id\` integer null;
alter table \`book3\` add column \`publisher_id\` integer null;
create index \`book3_author_id_index\` on \`book3\` (\`author_id\`);
create index \`book3_publisher_id_index\` on \`book3\` (\`publisher_id\`);

alter table \`book3_to_book_tag3\` add column \`book3_id\` integer null;
alter table \`book3_to_book_tag3\` add column \`book_tag3_id\` integer null;
create index \`book3_to_book_tag3_book3_id_index\` on \`book3_to_book_tag3\` (\`book3_id\`);
create index \`book3_to_book_tag3_book_tag3_id_index\` on \`book3_to_book_tag3\` (\`book_tag3_id\`);

alter table \`publisher3_to_test3\` add column \`publisher3_id\` integer null;
alter table \`publisher3_to_test3\` add column \`test3_id\` integer null;
create index \`publisher3_to_test3_publisher3_id_index\` on \`publisher3_to_test3\` (\`publisher3_id\`);
create index \`publisher3_to_test3_test3_id_index\` on \`publisher3_to_test3\` (\`test3_id\`);

pragma foreign_keys = on;
"
`;

exports[`SchemaGenerator generate schema from metadata [sqlite]: sqlite-drop-schema-dump-1 1`] = `
"drop table if exists \`author3\`;
drop table if exists \`book3\`;
drop table if exists \`book_tag3\`;
drop table if exists \`publisher3\`;
drop table if exists \`test3\`;
drop table if exists \`book3_to_book_tag3\`;
drop table if exists \`publisher3_to_test3\`;
drop table if exists \`mikro_orm_migrations\`;

"
`;

exports[`SchemaGenerator generate schema from metadata [sqlite]: sqlite-drop-schema-dump-2 1`] = `
"pragma foreign_keys = off;

drop table if exists \`author3\`;
drop table if exists \`book3\`;
drop table if exists \`book_tag3\`;
drop table if exists \`publisher3\`;
drop table if exists \`test3\`;
drop table if exists \`book3_to_book_tag3\`;
drop table if exists \`publisher3_to_test3\`;

pragma foreign_keys = on;
"
`;

exports[`SchemaGenerator generate schema from metadata [sqlite]: sqlite-schema-dump 1`] = `
"pragma foreign_keys = off;

drop table if exists \`author3\`;
drop table if exists \`book3\`;
drop table if exists \`book_tag3\`;
drop table if exists \`publisher3\`;
drop table if exists \`test3\`;
drop table if exists \`book3_to_book_tag3\`;
drop table if exists \`publisher3_to_test3\`;

create table \`author3\` (\`id\` integer not null primary key autoincrement, \`created_at\` datetime null, \`updated_at\` datetime null, \`name\` varchar not null, \`email\` varchar not null, \`age\` integer null, \`terms_accepted\` integer not null default 0, \`identities\` varchar null, \`born\` date(3) null, \`born_time\` time(3) null);
create unique index \`author3_email_unique\` on \`author3\` (\`email\`);

create table \`book3\` (\`id\` integer not null primary key autoincrement, \`title\` varchar not null);

create table \`book_tag3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar not null, \`version\` datetime not null default current_timestamp);

create table \`publisher3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar not null, \`type\` varchar not null);

create table \`test3\` (\`id\` integer not null primary key autoincrement, \`name\` varchar null, \`version\` integer not null default 1);

create table \`book3_to_book_tag3\` (\`id\` integer not null primary key autoincrement);

create table \`publisher3_to_test3\` (\`id\` integer not null primary key autoincrement);

alter table \`author3\` add column \`favourite_book_id\` integer null;
create index \`author3_favourite_book_id_index\` on \`author3\` (\`favourite_book_id\`);

alter table \`book3\` add column \`author_id\` integer null;
alter table \`book3\` add column \`publisher_id\` integer null;
create index \`book3_author_id_index\` on \`book3\` (\`author_id\`);
create index \`book3_publisher_id_index\` on \`book3\` (\`publisher_id\`);

alter table \`book3_to_book_tag3\` add column \`book3_id\` integer null;
alter table \`book3_to_book_tag3\` add column \`book_tag3_id\` integer null;
create index \`book3_to_book_tag3_book3_id_index\` on \`book3_to_book_tag3\` (\`book3_id\`);
create index \`book3_to_book_tag3_book_tag3_id_index\` on \`book3_to_book_tag3\` (\`book_tag3_id\`);

alter table \`publisher3_to_test3\` add column \`publisher3_id\` integer null;
alter table \`publisher3_to_test3\` add column \`test3_id\` integer null;
create index \`publisher3_to_test3_publisher3_id_index\` on \`publisher3_to_test3\` (\`publisher3_id\`);
create index \`publisher3_to_test3_test3_id_index\` on \`publisher3_to_test3\` (\`test3_id\`);

pragma foreign_keys = on;
"
`;

exports[`SchemaGenerator generate schema from metadata [sqlite]: sqlite-update-schema-dump 1`] = `
"pragma foreign_keys = off;

pragma foreign_keys = on;
"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-add-column 1`] = `
"alter table \`author2\` add \`favourite_book_uuid_pk\` varchar(36) null;
alter table \`author2\` add index \`author2_favourite_book_uuid_pk_index\`(\`favourite_book_uuid_pk\`);

alter table \`new_table\` add \`id\` int unsigned not null auto_increment primary key, add \`updated_at\` datetime(3) not null default current_timestamp(3);

"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-alter-column 1`] = `
"alter table \`author2\` modify \`age\` int(11) null default 42, modify \`born\` int not null default 42;
alter table \`author2\` drop foreign key \`author2_favourite_author_id_foreign\`;
alter table \`author2\` add constraint \`author2_favourite_author_id_foreign\` foreign key (\`favourite_author_id\`) references \`book_tag2\` (\`id\`) on update cascade on delete set null;

"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-create-table 1`] = `
"alter table \`book2\` drop \`foo\`;

alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;
alter table \`test2\` drop index \`test2_foo___bar_unique\`;
alter table \`test2\` drop index \`test2_foo___bar_index\`;
alter table \`test2\` drop \`foo___bar\`;
alter table \`test2\` drop \`foo___baz\`;

create table \`new_table\` (\`id\` int unsigned not null auto_increment primary key, \`created_at\` datetime(3) not null default current_timestamp(3), \`updated_at\` datetime(3) not null default current_timestamp(3), \`name\` varchar(255) not null) default character set utf8 engine = InnoDB;

"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-drop-column 1`] = `
"alter table \`author2\` drop foreign key \`author2_favourite_book_uuid_pk_foreign\`;
alter table \`author2\` drop index \`author2_favourite_book_uuid_pk_index\`;
alter table \`author2\` drop \`favourite_book_uuid_pk\`;

alter table \`new_table\` drop \`id\`;
alter table \`new_table\` drop \`updated_at\`;

"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-drop-table 1`] = `
"drop table if exists \`author2\`;

drop table if exists \`new_table\`;

"
`;

exports[`SchemaGenerator update schema [mysql]: mysql-update-schema-rename-column 1`] = `
"alter table \`author2\` change \`age\` \`age_in_years\` int(11) null default 42;


alter table \`author2\` change \`favourite_author_id\` \`favourite_writer_id\` int(11) unsigned null;


"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-add-column 1`] = `
"alter table \\"author2\\" add column \\"favourite_book_uuid_pk\\" varchar(36) null;

alter table \\"new_table\\" add column \\"id\\" serial primary key, add column \\"updated_at\\" timestamp(3) not null default current_timestamp(3);

"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-alter-column 1`] = `
"alter table \\"author2\\" alter column \\"name\\" drop default;
alter table \\"author2\\" alter column \\"name\\" drop not null;
alter table \\"author2\\" alter column \\"name\\" type int4 using (\\"name\\"::int4);
alter table \\"author2\\" alter column \\"name\\" set default 42;
alter table \\"author2\\" alter column \\"name\\" set not null;
alter table \\"author2\\" alter column \\"age\\" drop default;
alter table \\"author2\\" alter column \\"age\\" drop not null;
alter table \\"author2\\" alter column \\"age\\" type int4 using (\\"age\\"::int4);
alter table \\"author2\\" alter column \\"age\\" set default 42;
alter table \\"author2\\" drop constraint \\"author2_favourite_author_id_foreign\\";
alter table \\"author2\\" add constraint \\"author2_favourite_author_id_foreign\\" foreign key (\\"favourite_author_id\\") references \\"book_tag2\\" (\\"id\\") on update cascade on delete set null;

"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-create-table 1`] = `
"alter table \\"book2\\" drop column \\"foo\\";

alter table \\"test2\\" drop column \\"path\\";

create table \\"new_table\\" (\\"id\\" serial primary key, \\"created_at\\" timestamp(3) not null default current_timestamp(3), \\"updated_at\\" timestamp(3) not null default current_timestamp(3), \\"name\\" varchar(255) not null);

"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-drop-column 1`] = `
"alter table \\"author2\\" drop constraint \\"author2_favourite_book_uuid_pk_foreign\\";
alter table \\"author2\\" drop column \\"favourite_book_uuid_pk\\";

alter table \\"new_table\\" drop column \\"id\\";
alter table \\"new_table\\" drop column \\"updated_at\\";

"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-drop-table 1`] = `
"drop table if exists \\"author2\\" cascade;

drop table if exists \\"new_table\\" cascade;

"
`;

exports[`SchemaGenerator update schema [postgres]: postgres-update-schema-rename-column 1`] = `
"alter table \\"author2\\" rename column \\"age\\" to \\"age_in_years\\";


alter table \\"author2\\" rename column \\"favourite_author_id\\" to \\"favourite_writer_id\\";


"
`;
